--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "apexcharts": "^3.48.0",
     "axios": "^1.2.1",
     "pinia": "^2.0.11",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "quasar": "^2.8.0",
     "vue": "^3.2.29",
     "vue-i18n": "^9.0.0",
