--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "eslint --ext .js,.vue ./",
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
-    "start": "quasar build"
+    "build": "quasar build",
+    "start": "cd server && node server.js"
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "apexcharts": "^3.48.0",
     "axios": "^1.2.1",
+    "firebase": "^10.11.1",
     "pinia": "^2.0.11",
     "pinia-plugin-persistedstate": "^3.2.1",
     "quasar": "^2.8.0",
