--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@quasar/extras": "^1.16.4",
     "apexcharts": "^3.48.0",
     "axios": "^1.2.1",
+    "connect-history-api-fallback": "^2.0.0",
+    "express": "^4.19.2",
     "pinia": "^2.0.11",
     "pinia-plugin-persistedstate": "^3.2.1",
     "quasar": "^2.8.0",
+    "serve-static": "^1.15.0",
     "vue": "^3.2.29",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.12",
